update search methods